[package]
name = "os"
version = "0.1.0"
authors = ["cheng"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# It terminated directly when panic, because we do not implement the function of stack unwinding
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"